--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.4.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
