--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-react-app": "^7.0.1"
+    "eslint-config-react-app": "^7.0.1",
+    "json-server": "^1.0.0-beta.0",
+    "json-server-auth": "^2.1.0"
   }
 }
